--- a/quota_definitions/config.json
+++ b/quota_definitions/config.json
@@ -74,7 +74,7 @@
                 "control_type": "date_picker_control",
                 "label": "When does this definition start?",
                 "label_style": "govuk-label--m",
-                "hint_text": "",
+                "hint_text": "Please ensure that this date does not overlap any existing definitions on this quota.",
                 "control_name": "validity_start_date",
                 "default": "",
                 "required": true
@@ -83,7 +83,7 @@
                 "control_type": "date_picker_control",
                 "label": "When does this definition end?",
                 "label_style": "govuk-label--m",
-                "hint_text": "",
+                "hint_text": "For quota definitions the end date is required.",
                 "control_name": "validity_end_date",
                 "default": "",
                 "required": true
@@ -97,7 +97,7 @@
                 "control_type": "input_control",
                 "label": "What will the initial volume of this definition period be?",
                 "label_style": "govuk-label--m",
-                "hint_text": "",
+                "hint_text": "Please check the volume agains the unit provided.",
                 "control_name": "initial_volume",
                 "control_style": "govuk-input--width-10",
                 "size": 20,
@@ -112,7 +112,7 @@
                 "control_type": "select_control",
                 "label": "How will the quota balance(s) be measured?",
                 "label_style": "govuk-label--m",
-                "hint_text": "In most cases, quotas are measured according to physical attributes, such as weight or volume. Please select that attribute here. You may also need to select a qualifier for the measurement unit that you select. Only the qualifiers that are applicable to the measurement unit selected are displayed.",
+                "hint_text": "In most cases, quotas are measured according to physical attributes, such as weight or volume. Please select that attribute here. You may also need to select a qualifier for the measurement unit that you select. Only the qualifiers that are applicable to the measurement unit selected are displayed.<br /><br />Please ensure that you double check the measurement units provided and, if in doubt, use the smaller of two measurement units (e.g. prefer kilogrammes over tonnes).",
                 "control_name": "measurement_unit_code",
                 "default_value": "Unspecified",
                 "default_string": "- Please select a measurement unit code -",
