--- a/footnote_types/config.json
+++ b/footnote_types/config.json
@@ -130,42 +130,42 @@
             {
                 "column_name": "Footnote type",
                 "data_column": "footnote_type_id",
-                "sort_field": "",
+                "sort_field": "footnote_type_id",
                 "tooltip": "",
-                "align": ""
+                "align": "nw"
             },
             {
                 "column_name": "Description",
                 "data_column": "footnote_type_url",
-                "sort_field": "",
+                "sort_field": "description",
                 "tooltip": "",
                 "align": ""
             },
             {
                 "column_name": "Application code",
                 "data_column": "application_code_plus_description",
-                "sort_field": "",
+                "sort_field": "application_code",
                 "tooltip": "Application code denotes the overarching purpose of footnote types that can be created. In general, all except for &quot;1&nbsp;-&nbsp;additional&nbsp;codes&quot; are legacy codes and are not to be used in the future.",
                 "align": ""
             },
             {
                 "column_name": "Start date",
                 "data_column": "validity_start_date",
-                "sort_field": "",
+                "sort_field": "validity_start_date",
                 "tooltip": "",
                 "align": "c"
             },
             {
                 "column_name": "End date",
                 "data_column": "validity_end_date",
-                "sort_field": "",
+                "sort_field": "validity_end_date",
                 "tooltip": "",
                 "align": "c"
             },
             {
                 "column_name": "Status",
                 "data_column": "status",
-                "sort_field": "",
+                "sort_field": "status",
                 "tooltip": "",
                 "align": "c"
             },
