--- a/additional_codes/config.json
+++ b/additional_codes/config.json
@@ -7,8 +7,10 @@
             "default_sort_fields": "additional_code_type_id|additional_code",
             "object_name": "Additional codes",
             "title_create": "Create a new additional code",
-            "title_edit": "Edit additional code {additional_code_type_id}{additional_code}",
+            "xtitle_edit": "Edit additional code {additional_code_type_id}{additional_code}",
+            "title_edit": "Edit additional code",
             "url_edit": "./create_edit.html?mode=update&additional_code_type_id={additional_code_type_id}&additional_code={additional_code}&additional_code_sid={additional_code_sid}",
+            "url_view": "./view.html?mode=view&additional_code_type_id={additional_code_type_id}&additional_code={additional_code}&additional_code_sid={additional_code_sid}",
             "title_view": "Additional code {additional_code_type_id}{additional_code}",
             "description_keys": "additional_code_sid|additional_code_type_id|additional_code",
             "validate": false,
