--- a/certificate_types/config.json
+++ b/certificate_types/config.json
@@ -4,9 +4,11 @@
             "object_name": "Certificate types",
             "title": "Find and edit certificate types",
             "title_create": "Create a new certificate type",
-            "title_edit": "Edit certificate type {certificate_type_code}",
+            "xtitle_edit": "Edit certificate type {certificate_type_code}",
+            "title_edit": "Edit certificate type",
             "url_edit": "./create_edit.html?mode=update&certificate_type_code={certificate_type_code}",
-            "title_view": "Certificate code type {certificate_type_code}",
+            "url_view": "./view.html?mode=view&certificate_type_code={certificate_type_code}",
+            "title_view": "Certificate type {certificate_type_code}",
             "description_keys": "certificate_type_code",
             "validate": false,
             "inset": "Enter criteria to help find a certificate type. Alternatively, <a class='govuk-link' href='create_edit.html'>create a new certificate type</a>.",
