--- a/certificates/config.json
+++ b/certificates/config.json
@@ -6,10 +6,12 @@
             "freetext_fields": "description|certificate_type_code+certificate_code",
             "default_sort_fields": "certificate_code",
             "object_name": "Certificates",
-            "title_create": "Create a certificate",
-            "title_edit": "Edit certificate {certificate_type_code}{certificate_code}",
+            "title_create": "Create a new certificate",
+            "xtitle_edit": "Edit certificate {certificate_type_code}{certificate_code}",
+            "title_edit": "Edit certificate",
             "url_edit": "./create_edit.html?mode=update&certificate_type_code={certificate_type_code}&certificate_code={certificate_code}",
-            "title_view": "Certificate code {certificate_code}",
+            "url_view": "./view.html?mode=view&certificate_type_code={certificate_type_code}&certificate_code={certificate_code}",
+            "title_view": "Certificate {certificate_type_code}{certificate_code}",
             "description_keys": "certificate_type_code|certificate_code",
             "validate": false,
             "buttons": {
