--- a/geographical_areas/config.json
+++ b/geographical_areas/config.json
@@ -6,9 +6,11 @@
             "freetext_fields": "description|geographical_area_id|geographical_area_sid::text",
             "default_sort_fields": "geographical_area_id",
             "object_name": "Geographical areas",
-            "title_create": "Create a geographical area",
-            "title_edit": "Edit geographical area {geographical_area_id}",
+            "title_create": "Create a new geographical area",
+            "xtitle_edit": "Edit geographical area {geographical_area_id}",
+            "title_edit": "Edit geographical area",
             "url_edit": "./create_edit.html?mode=update&geographical_area_id={geographical_area_id}&geographical_area_sid={geographical_area_sid}",
+            "url_view": "./view.html?mode=view&geographical_area_id={geographical_area_id}&geographical_area_sid={geographical_area_sid}",
             "title_view": "Geographical area {geographical_area_id}",
             "description_keys": "geographical_area_sid|geographical_area_id",
             "validate": false,
@@ -56,12 +58,6 @@
                     "control_scope": "view",
                     "control_name": "geographical_area_memberships",
                     "caption": "Area memberships"
-                },
-                {
-                    "control_type": "roo_membership_table_control",
-                    "control_scope": "view",
-                    "control_name": "roo_scheme_memberships",
-                    "caption": "Rules of origin schemes"
                 },
                 {
                     "control_type": "version_control",
